running-mate/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: running-mate-api
  namespace: running-mate
  labels:
    app.kubernetes.io/name: running-mate-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: running-mate-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
